# Clippit

./: .editorconfig  .gitignore  AUTOCOMPLETE_IMPLEMENTATION.md  BUILD_FOR_USERS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.clippit  LICENSE  PERFORMANCE_FIXES.md  README.md  ROADMAP.md  clippit.example.toml  fix-desktop-icon.sh  install-desktop-icon.sh  update-clippit.sh
.cursor/rules/: 00-PROJECT-OVERVIEW.md  01-ARCHITECTURE.md  02-DEVELOPMENT-STANDARDS.md  README.md
.cursor/rules/build-deploy/: BUILD-SYSTEM.md  DEPENDENCIES.md  INSTALLATION.md  PACKAGING.md
.cursor/rules/core/: CONFIG-PATTERNS.md  CORE-OVERVIEW.md  HISTORY-STORAGE.md  TYPES-DEFINITIONS.md  VALIDATION.md
.cursor/rules/daemon/: DAEMON-OVERVIEW.md  HOTKEYS-SYSTEM.md  IPC-SERVER.md  MONITOR-CLIPBOARD.md  TYPING-AUTOCOMPLETE.md
.cursor/rules/features/: AUTOCOMPLETE-GLOBAL.md  CLIPBOARD-CAPTURE.md  IMAGE-HANDLING.md  INTERNATIONALIZATION.md  SEARCH-SUGGESTIONS.md
.cursor/rules/infrastructure/: COMMUNICATION.md  IBUS-ENGINE.md  IPC-PROTOCOL.md  QT-BRIDGE.md
.cursor/rules/testing/: INTEGRATION-TESTS.md  TESTING-STRATEGY.md  UNIT-TESTS.md
.cursor/rules/ui/: DASHBOARD-QT.md  POPUP-GTK.md  TOOLTIP.md  UI-OVERVIEW.md  UI-PATTERNS.md
.github/workflows/: ci.yml
assets/: clippit.desktop
crates/clippit-core/: Cargo.toml
crates/clippit-core/locales/: en.yml  pt.yml
crates/clippit-core/src/: config.rs  history.rs  lib.rs  storage.rs  types.rs  validator.rs
crates/clippit-daemon/: Cargo.toml
crates/clippit-daemon/src/: autocomplete_manager.rs  hotkey.rs  main.rs  monitor.rs  ocr_processor.rs  typing_monitor.rs
crates/clippit-dashboard/: Cargo.toml
crates/clippit-dashboard/qml/: Main.qml  qml.qrc
crates/clippit-dashboard/qml/components/: MenuButton.qml
crates/clippit-dashboard/qml/pages/: GeneralPage.qml  HotkeysPage.qml  PrivacyPage.qml  ThemePage.qml
crates/clippit-dashboard/src/: main.rs
crates/clippit-dashboard/src/ui/: autocomplete.rs  general.rs  hotkeys.rs  mod.rs  privacy.rs  search.rs  theme.rs
crates/clippit-ibus/: Cargo.toml
crates/clippit-ibus/data/: clippit.xml
crates/clippit-ibus/src/: engine.rs  main.rs  typing_buffer.rs
crates/clippit-ipc/: Cargo.toml
crates/clippit-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/clippit-popup/: Cargo.toml
crates/clippit-popup/qml/: HistoryItem.qml  Popup.qml  qml.qrc
crates/clippit-popup/src/: main.rs  panic_handler.rs
crates/clippit-popup/src/controllers/: clipboard.rs  keyboard.rs  mod.rs
crates/clippit-popup/src/models/: entry_map.rs  mod.rs
crates/clippit-popup/src/utils/: focus.rs  mod.rs  suggestions.rs  theme.rs  thumbnail.rs
crates/clippit-popup/src/views/: autocomplete_popup.rs  buttons.rs  floating_autocomplete.rs  image_preview.rs  list_item.rs  mod.rs  search.rs  suggestions_popover.rs  window.rs
crates/clippit-qt-bridge/: Cargo.toml  build.rs
crates/clippit-qt-bridge/src/: config_model.rs  history_model.rs  lib.rs  theme_model.rs
crates/clippit-tooltip/: Cargo.toml
crates/clippit-tooltip/src/: main.rs
crates/clippit-ui/: Cargo.toml
crates/clippit-ui/src/: main.rs  ui.rs
docs/: AUTOCOMPLETE_GLOBAL.md  BUILD_UNIVERSAL.md  CONFIGURATION.md  DASHBOARD_STATUS.md  DEVELOPMENT.md  FEATURES.md  GLIBC_COMPATIBILITY.md  GTK_INSTALL.md  INSTALL_PACKAGE.md  LOAD_TESTING.md  OCR_FEATURE.md  QT_SETUP.md  QUICKSTART.md  TROUBLESHOOTING.md  WAYLAND_HOTKEYS.md
scripts/: build-deb-compat.sh  build-deb-simple.sh  build-deb-ubuntu20.sh  build-deb-universal.sh  build-deb.sh  install-gtk-deps.sh  install-ibus.sh  install.sh  reinstall.sh  setup-wayland-hotkey.sh  test-load.rs  test-load.sh  test-ocr.sh  uninstall.sh  update-icon.sh
