[package]
name = "clippit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
image.workspace = true
tracing.workspace = true
toml.workspace = true
dirs.workspace = true
rust-i18n.workspace = true
