[package]
name = "clippit-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "clippit-daemon"
path = "src/main.rs"

[dependencies]
clippit-core = { path = "../clippit-core" }
clippit-ipc = { path = "../clippit-ipc" }

tokio.workspace = true
arboard.workspace = true
global-hotkey.workspace = true
rdev.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
dirs = "5.0"
image.workspace = true
