[package]
name = "clippit-ibus"
version = "1.7.1"
edition = "2021"
authors = ["Clippit Contributors"]
description = "IBus Input Method Engine for Clippit global autocomplete"
license = "MIT"

[dependencies]
clippit-core = { path = "../clippit-core" }
clippit-ipc = { path = "../clippit-ipc" }

# DBus communication
zbus = "4.0"
zvariant = "4.0"
async-trait = "0.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "clippit-ibus"
path = "src/main.rs"
