[package]
name = "clippit-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
interprocess.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
